--- a/css/2-styles.css
+++ b/css/2-styles.css
@@ -4,7 +4,7 @@
 
 body {
     padding: 70px;
-    background-color: #F6F6F6;
+    background-color: #F6F6F6;;
 }
 
 .eclipse {
@@ -33,13 +33,13 @@ form {
 form h3 {
     margin: 0px;
     color: rgba(0, 0, 0, 0.75);
-font-family: Poppins;
-font-size: 25px;
-font-style: normal;
-font-weight: 600;
-line-height: 115.688%; /* 20.824px */
-letter-spacing: 1.08px;
-margin-bottom: 30px;
+    font-family: Poppins;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 115.688%; /* 20.824px */
+    letter-spacing: 1.08px;
+    margin-bottom: 30px;
 }
 
 #image {
@@ -49,12 +49,12 @@ margin-bottom: 30px;
 
 input {
     color: rgba(0, 0, 0, 0.70);
-font-family: Poppins;
-font-size: 17px;
-font-style: normal;
-font-weight: 400;
-line-height: 137.188%; /* 17.834px */
-letter-spacing: 0.78px;
+    font-family: Poppins;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 137.188%; /* 17.834px */
+    letter-spacing: 0.78px;
 }
 
 .input-group span{
@@ -71,6 +71,11 @@ letter-spacing: 0.78px;
     right: 17px;
     font-size: 14px;
     color: red;
+}
+
+#check-color
+{
+    color: green;
 }
 
 #contact-email {
@@ -92,36 +97,36 @@ letter-spacing: 0.78px;
     width: 325px;
     height: 62px;
     flex-shrink: 0;
-   background-color: #50C2C9;
-   border: transparent;
-   color: #FFF;
-text-align: center;
-font-family: Poppins;
-font-size: 18px;
-font-style: normal;
-font-weight: 600;
-line-height: 137.188%; /* 24.694px */
-letter-spacing: 1.08px;
+    background-color: #50C2C9;
+    border: transparent;
+    color: #FFF;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 137.188%; /* 24.694px */
+    letter-spacing: 1.08px;
 }
 
 #para {
     color: #000;
-text-align: center;
-font-family: Poppins;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 115.688%; /* 16.196px */
-letter-spacing: 0.84px;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 115.688%; /* 16.196px */
+    letter-spacing: 0.84px;
 }
 
 .link {
     color: #50C2C9;
-font-family: Poppins;
-font-size: 18px;
-font-style: normal;
-font-weight: 700;
-line-height: 115.688%;
-letter-spacing: 0.84px;
-text-decoration: none;
+    font-family: Poppins;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 115.688%;
+    letter-spacing: 0.84px;
+    text-decoration: none;
 }
