--- a/2-alx_capstone_project/style.css
+++ b/2-alx_capstone_project/style.css
@@ -193,11 +193,11 @@ header.sticky
     box-shadow: 0.1rem 1rem rgba(0, 0, 0, 2);
     padding: 16px 16%; 
 }
-/* End of Hero Section */
+/* End of About Section */
 
 
 /* Start of skills Section */
-.about
+.skills
 {
     background: var(--second-bg-color);
     display: grid;
@@ -206,13 +206,13 @@ header.sticky
     
 } 
 
-.about-text{
+.skills-text{
     display: flex;
     justify-content: space-between;
     align-items: center;
 } 
 
-.about-img img
+.skills-img img
 {
     height: 530px;
     max-width: 20rem;
@@ -220,7 +220,7 @@ header.sticky
 }
 
 
-.about-text pre
+.skills-text pre
 {
     font-weight: 600;
     font-size: 3rem;
@@ -241,7 +241,7 @@ header.sticky
     line-height: 42px;
 } 
 
-.about-text
+.skills-text
 {
   display: flex;
   gap: 9rem;
@@ -253,7 +253,7 @@ header.sticky
 
 .projects
 {
-    background: var(--second-bg-color);
+    background: var(--bg-color);
 }
 
 .center-text
@@ -339,6 +339,11 @@ header.sticky
 /* End of Project */
 
 /* Start of Contact */
+.contact
+{
+    background: var(--second-bg-color);
+}
+
 .contact-form
 {
     display: flex;
@@ -361,7 +366,7 @@ form textarea
     border: none;
     outline: none;
     box-shadow: 0 0 5px var(--main-color);
-    background: #2d343f;
+    background: var(--bg-color);
     color: var(--text-color);
     margin-bottom: 20px;
     border-radius: 8px;
@@ -402,7 +407,7 @@ form .send-btn:hover
 .footer
 {
     padding: 22px;
-    background: var(--second-bg-color);
+    background: var(--bg-color);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -447,7 +452,7 @@ form .send-btn:hover
     }
 }
 
-@media (max-width: 130px){
+@media (max-width: 1300px){
     header{
         padding: 20px 5%;
     }
@@ -460,8 +465,91 @@ form .send-btn:hover
     .footer{
         padding: 18px 5%;
     }
-    .hero{
+    .aboutme{
         height: 90vh;
         background-position: center;
+    }
+}
+
+@media (max-width: 1290px){
+    .box{
+        padding: 40px 40px 46px;
+    }
+    .box img{
+        width: 100%;
+        height: 60px;
+        max-width: 60px;
+    }
+    .box h4{
+        font-size: 21px;
+    }
+}
+
+@media (max-width: 1240px){
+    .skills{
+        grid-template-columns: 1-fr;
+        gap: 2rem;
+        text-align: center;
+    }
+    .skills-img img{
+        text-align: center;
+        width: 100%;
+        height: 400px;
+        max-width: 400px;
+        border-radius: 50%;
+        object-fit: cover;
+        margin: 0 auto;
+    }
+    :root{
+        --h1-font: 4rem;
+        --h2-font: 2.2rem;
+        --p-font: 15px;
+    }
+}
+
+@media (max-width: 950px){
+    :root{
+        --h1-font: 3.5rem;
+    }
+    .social{
+        margin-bottom: 20px;
+    }
+    .navlist{
+        position: absolute;
+        top: 100%;
+        right: 0;
+        width: 255px;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        background: var(--bg-color);
+        transition: all .50s ease;
+    }
+    .navlist a{
+        display: block;
+        padding: 17px;
+        font-size: 22px; 
+    }
+}
+
+@media (max-width: 680px){
+    .main-content p{
+        width: 100%;
+    }
+}
+
+@media (max-width: 470px){
+    :root{
+        --h1-font: 3rem;
+        --h2-font: 2rem;
+    }
+    .skills-img img{
+        text-align: center;
+        width: 100%;
+        height: 300px;
+        max-width: 300px; 
+        border-radius: 50%;
+        object-fit: cover;
+        margin: 0 auto;
     }
 }
